<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:src="@drawable/baseline_call_24"
        app:tint="@color/design_default_color_primary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:paddingTop="2dp"
        android:text="@string/sign_in_phone"
        android:textColor="@color/material_dynamic_neutral20"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:lineSpacingMultiplier="1.1"
        android:paddingTop="16dp"
        android:text="@string/enter_phone_number"
        android:textColor="@color/material_dynamic_neutral20"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPhoneNumberLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:paddingVertical="16dp"
        app:prefixText="+91 "
        app:prefixTextAppearance="@style/Widget.Material3.TextInputEditText.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPhoneNumber"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone"
            android:inputType="number"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/otpContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRequestOtp"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:minHeight="60dp"
        android:padding="16dp"
        android:text="@string/request_otp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonVerifyOtp"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:minHeight="60dp"
        android:padding="16dp"
        android:text="@string/verify_otp"
        android:visibility="gone" />

</LinearLayout>