<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="48dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        style="@style/TextAppearance.Material3.DisplayLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/design_default_color_primary" />

    <TextView
        style="@style/TextAppearance.Material3.HeadlineSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_small_desc"
        android:textColor="@color/design_default_color_on_secondary" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGoogleSignIn"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:minHeight="60dp"
        android:paddingHorizontal="64dp"
        android:text="@string/sign_in_google"
        app:icon="@drawable/ic_google_g" />

</LinearLayout>