<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".CartActivity">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif"
        android:text="@string/cart"
        android:textColor="@color/md_theme_onPrimaryContainer"
        android:textSize="48sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/md_theme_primaryContainer"
        android:padding="8dp"
        android:requiresFadingEdge="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_weight"
                android:textColor="@color/material_dynamic_neutral20"
                android:textSize="24sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/totalWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/material_dynamic_neutral20"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:textColor="@color/material_dynamic_neutral20"
                android:textSize="24sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/material_dynamic_neutral20"
                android:textSize="24sp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCheckout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:minHeight="60dp"
            android:padding="16dp"
            android:text="@string/proceed_to_checkout" />
    </LinearLayout>

</LinearLayout>